--- a/index.html
+++ b/index.html
@@ -343,55 +343,67 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo" href="./index.html">
-          <span>Web</span><span>Studio</span>
-        </a>
-        <address class="address">
-          <ul class="block-style footer-contacts">
-            <li class="footer-link">
-              <a
-                class="link address-link-white"
-                href="https://www.google.com.ua/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4265807,30.5361971,17z?hl"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+      <div class="container footer-box">
+        <div class="address-box">
+          <a class="logo" href="./index.html">
+            <span>Web</span><span>Studio</span>
+          </a>
+          <address class="address">
+            <ul class="block-style footer-contacts">
+              <li class="footer-link">
+                <a
+                  class="link address-link-white"
+                  href="https://www.google.com.ua/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4265807,30.5361971,17z?hl"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-link">
+                <a class="link address-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-link">
+                <a class="link address-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc-link">
+          <p class="soc-title">Приєднуйтесь</p>
+          <ul class="block-style footer-icon-list">
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-link">
-              <a class="link address-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-link">
-              <a class="link address-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-        <h2 class="soc-title">Приєднуйтесь</h2>
-        <div class="footer-soc-link">
-          <a href="" class="net-link-footer">
-            <svg class="net-icon-footer" width="20" height="20">
-              <use href="./imeges/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-          <a href="" class="net-link-footer">
-            <svg class="net-icon-footer" width="20" height="20">
-              <use href="./imeges/icons.svg#icon-twitter"></use>
-            </svg>
-          </a>
-          <a href="" class="net-link-footer">
-            <svg class="net-icon-footer" width="20" height="20">
-              <use href="./imeges/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-          <a href="" class="net-link-footer">
-            <svg class="net-icon-footer" width="20" height="20">
-              <use href="./imeges/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a>
         </div>
       </div>
     </footer>
