--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-          <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
@@ -20,28 +20,40 @@
   <body>
     <header class="header">
       <div class="container header-container">
-          <nav class="header-list">
-            <a class="logo" href="./index.html"><span>Web</span><span>Studio</span> </a>
-            <ul class="block-style header-nav">
-              <li>
-                <a class="link nav-link" href="./index.html">Студія</a>
-              </li>
-              <li>
-                <a class="link nav-link active" href="#">Портфоліо</a>
-              </li>
-              <li>
-                <a class="link nav-link" href="#">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="contacts block-style">
+        <nav class="header-list">
+          <a class="logo" href="./index.html"
+            ><span>Web</span><span>Studio</span>
+          </a>
+          <ul class="block-style header-nav">
             <li>
-              <a class="link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="link nav-link" href="./index.html">Студія</a>
             </li>
             <li>
-              <a class="link contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="link nav-link active" href="#">Портфоліо</a>
+            </li>
+            <li>
+              <a class="link nav-link" href="#">Контакти</a>
             </li>
           </ul>
+        </nav>
+        <ul class="contacts block-style">
+          <li>
+            <a class="contact-link" href="mailto:info@devstudio.com"
+              ><svg class="icon-header" width="16" height="12">
+                <use href="./imeges/icons.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a class="contact-link" href="tel:+380961111111"
+              ><svg class="icon-header" width="10" height="16">
+                <use href="./imeges/icons.svg#icon-tell"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -65,7 +77,7 @@
               <button class="border-button" type="button">Маркетинг</button>
             </li>
           </ul>
-      <!-- portfolio -->
+          <!-- portfolio -->
           <ul class="block-style proposition-list">
             <li class="portfolio-item">
               <img
@@ -85,7 +97,9 @@
                 width="370px"
               />
               <div class="portfolio-text-container">
-                <h2 class="description-title">Постер New Orlean vs Golden Star</h2>
+                <h2 class="description-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
                 <p class="portfolio-description">Дизайн</p>
               </div>
             </li>
@@ -168,32 +182,73 @@
             </li>
           </ul>
         </div>
-    </section>
+      </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo" href="./index.html">
-          <span>Web</span><span>Studio</span>
-        </a>
+      <div class="container footer-box">
+        <div class="address-box">
+          <a class="logo" href="./index.html">
+            <span>Web</span><span>Studio</span>
+          </a>
           <address class="address">
             <ul class="block-style footer-contacts">
               <li class="footer-link">
-                <a class="link address-link-white"
+                <a
+                  class="link address-link-white"
                   href="https://www.google.com.ua/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4265807,30.5361971,17z?hl"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a>
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
               </li>
               <li class="footer-link">
-                <a class="link address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link address-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
               <li class="footer-link">
-                <a class="link address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="link address-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
         </div>
+        <div class="footer-soc-link">
+          <p class="soc-title">Приєднуйтесь</p>
+          <ul class="block-style footer-icon-list">
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="net-link-footer">
+                <svg class="net-icon-footer" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
