--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <div class="advantage-list">
-            <a href="#" class="advantage-background">
+            <div class="advantage-background">
               <svg width="70px" height="70px">
                 <use href="./imeges/icons.svg#icon-antenna"></use>
               </svg>
-            </a>
-            <a href="#" class="advantage-background">
+            </div>
+            <div class="advantage-background">
               <svg width="70px" height="70px">
                 <use href="./imeges/icons.svg#icon-clock"></use>
               </svg>
-            </a>
-            <a href="#" class="advantage-background">
+            </div>
+            <div class="advantage-background">
               <svg width="70px" height="70px">
                 <use href="./imeges/icons.svg#icon-diagram"></use>
               </svg>
-            </a>
-            <a href="#" class="advantage-background">
+            </div>
+            <div class="advantage-background">
               <svg width="70px" height="70px">
                 <use href="./imeges/icons.svg#icon-astronaut"></use>
               </svg>
-            </a>
+            </div>
           </div>
           <ul class="block-style">
             <li class="advantage-item">
@@ -169,22 +169,28 @@
                 <h3>Ігор Дем'яненко</h3>
                 <p class="text-description">Product Designer</p>
                 <ul class="net-list block-style">
-                  <li class="net-item">
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-linkedin"></use>
@@ -204,22 +210,28 @@
                 <h3>Ольга Рєпіна</h3>
                 <p class="text-description">Frontend Developer</p>
                 <ul class="net-list block-style">
-                  <li class="net-item">
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-linkedin"></use>
@@ -239,22 +251,28 @@
                 <h3>Микола Тарасов</h3>
                 <p class="text-description">Marketing</p>
                 <ul class="net-list block-style">
-                  <li class="net-item">
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-linkedin"></use>
@@ -274,22 +292,28 @@
                 <h3>Михайло Єрмаков</h3>
                 <p class="text-description">UI Designer</p>
                 <ul class="net-list block-style">
-                  <li class="net-item">
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
+                  </li>
+                  <li>
                     <a href="" class="net-link">
                       <svg class="net-icon" width="20" height="20">
                         <use href="./imeges/icons.svg#icon-linkedin"></use>
@@ -303,41 +327,53 @@
         </div>
       </section>
       <!-- section5 -->
-      <section>
+      <section class="section-client">
         <div class="container">
-          <h1 class="clients-title">Постійні клієнти</h1>
-          <div class="clients-list">
-            <a href="#" class="clients-link">
-              <svg class="clients-icon" width="106px" height="60px">
-                <use href="./imeges/icons.svg#icon-ya-co"></use>
-              </svg>
-            </a>
-            <a href="#" class="clients-link">
-              <svg class="clients-icon" width="106px" height="60px">
-                <use href="./imeges/icons.svg#icon-tagline-here"></use>
-              </svg>
-            </a>
-            <a href="#" class="clients-link">
-              <svg class="clients-icon" width="106px" height="60px">
-                <use href="./imeges/icons.svg#icon-company"></use>
-              </svg>
-            </a>
-            <a href="#" class="clients-link">
-              <svg class="clients-icon" width="106px" height="60px">
-                <use href="./imeges/icons.svg#icon-foster"></use>
-              </svg>
-            </a>
-            <a href="#" class="clients-link">
-              <svg class="clients-icon" width="106px" height="60px">
-                <use href="./imeges/icons.svg#icon-brand"></use>
-              </svg>
-            </a>
-            <a href="#" class="clients-link">
-              <svg class="clients-icon" width="106px" height="60px">
-                <use href="./imeges/icons.svg#icon-tag-line"></use>
-              </svg>
-            </a>
-          </div>
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list block-style">
+            <li>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106px" height="60px">
+                  <use href="./imeges/icons.svg#icon-ya-co"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106px" height="60px">
+                  <use href="./imeges/icons.svg#icon-tagline-here"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106px" height="60px">
+                  <use href="./imeges/icons.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106px" height="60px">
+                  <use href="./imeges/icons.svg#icon-foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106px" height="60px">
+                  <use href="./imeges/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106px" height="60px">
+                  <use href="./imeges/icons.svg#icon-tag-line"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -359,13 +395,13 @@
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-link">
-                <a class="link address-link" href="mailto:info@devstudio.com"
+              <li>
+                <a class="contact-link-footer" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="footer-link">
-                <a class="link address-link" href="tel:+380961111111"
+              <li>
+                <a class="contact-link-footer" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
