--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,9 @@
           </ul>
           <!-- portfolio -->
           <ul class="block-style proposition-list">
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/notepad.jpg"
                 alt="notepad"
                 width="370px"
@@ -89,9 +90,11 @@
                 <h2 class="description-title">Технокряк</h2>
                 <p class="portfolio-description">Веб-сайт</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/poster.jpg"
                 alt="Poster New Orlean vs Golden Star"
                 width="370px"
@@ -102,9 +105,11 @@
                 </h2>
                 <p class="portfolio-description">Дизайн</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/restaurant.jpg"
                 alt="Restaurant Seafood"
                 width="370px"
@@ -113,9 +118,11 @@
                 <h2 class="description-title">Ресторан Seafood</h2>
                 <p class="portfolio-description">Додаток</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/project-prime.jpg"
                 alt="Project Prime"
                 width="370px"
@@ -124,9 +131,11 @@
                 <h2 class="description-title">Проєкт Prime</h2>
                 <p class="portfolio-description">Маркетинг</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/project-boxes.jpg"
                 alt="Project Boxes"
                 width="370px"
@@ -135,9 +144,11 @@
                 <h2 class="description-title">Проєкт Boxes</h2>
                 <p class="portfolio-description">Додаток</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/inspiration-borders.jpg"
                 alt="Inspiration has no Borders"
                 width="370px"
@@ -146,9 +157,11 @@
                 <h2 class="description-title">Inspiration has no Borders</h2>
                 <p class="portfolio-description">Веб-сайт</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/limited-edition.jpg"
                 alt="Limited Edition"
                 width="370px"
@@ -157,9 +170,11 @@
                 <h2 class="description-title">Видання Limited Edition</h2>
                 <p class="portfolio-description">Дизайн</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/notepad.jpg"
                 alt="Project LAB"
                 width="370px"
@@ -168,9 +183,11 @@
                 <h2 class="description-title">Проєкт LAB</h2>
                 <p class="portfolio-description">Маркетинг</p>
               </div>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
+            <li>
+              <a class="photo-portfolio" href="#">
+                <img
                 src="./imeges/portfolio/growing-business.jpg"
                 alt="Growing Business"
                 width="370px"
@@ -179,6 +196,7 @@
                 <h2 class="description-title">Growing Business</h2>
                 <p class="portfolio-description">Додаток</p>
               </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -193,7 +211,7 @@
           </a>
           <address class="address">
             <ul class="block-style footer-contacts">
-              <li class="footer-link">
+              <li>
                 <a
                   class="link address-link-white"
                   href="https://www.google.com.ua/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4265807,30.5361971,17z?hl"
@@ -202,13 +220,13 @@
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-link">
-                <a class="link address-link" href="mailto:info@devstudio.com"
+              <li>
+                <a class="contact-link-footer" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="footer-link">
-                <a class="link address-link" href="tel:+380961111111"
+              <li>
+                <a class="contact-link-footer" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
